- fixed social icons being off screen

--- a/css/main.css
+++ b/css/main.css
@@ -885,7 +885,8 @@ nav a {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   padding: 0;
-  margin-top: 5vh;
+  margin-top: 0vh;
+  margin-bottom: auto;
   width: 100%;
 }
 
