--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -117,7 +117,8 @@ nav a{
     flex-direction: row;
     justify-content: space-evenly;
     padding: 0;
-    margin-top: 5vh;
+    margin-top: 0vh;
+    margin-bottom: auto;
     width: 100%;
     @include mq($width: 70em){
         max-width: 100%;
